add delete to contract and controllers
