# src/main/java/com/gymapp/controller/EjerciciosController.java
@@ -5,7 +5,6 @@ import com.gymapp.api.EjerciciosApi;
 import com.gymapp.model.Ejercicio;
 import com.gymapp.to.mapper.EjercicioMapper;
 import lombok.AllArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -16,6 +15,12 @@ import java.util.List;
 public class EjerciciosController implements EjerciciosApi {
 
     private final EjercicioMapper ejercicioMapper;
+
+
+    @Override
+    public ResponseEntity<Void> ejerciciosEjercicioIdDelete(Long ejercicioId) {
+        return null;
+    }
 
     @Override
     public ResponseEntity<Ejercicio> ejerciciosEjercicioIdGet(Long ejercicioId) {
@@ -29,7 +34,7 @@ public class EjerciciosController implements EjerciciosApi {
 
     @Override
     public ResponseEntity<List<Ejercicio>> ejerciciosGet() {
-        return new ResponseEntity<>(HttpStatus.OK);
+        return null;
     }
 
     @Override
